--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "@mongez/reinforcements",
-  "version": "1.0.28",
-  "description": "A lightweight package to give a massive reinforcements to variant types of data in Nodejs/Javascript",
-  "main": "src/index.ts",
-  "dependencies": {},
-  "scripts": {
-    "update": "ncu -u",
-    "fix:test": "eslint --fix -c ./.eslintrc.json ./tests",
-    "format:test": "prettier --write ./tests/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
-    "fix": "eslint --fix -c ./.eslintrc.json ./src",
-    "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
-    "test": "jest tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/hassanzohdy/node"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "jest": "^29.0.1",
-    "npm-check-updates": "^16.0.6",
-    "prettier": "^2.7.1",
-    "prettier-plugin-organize-imports": "^3.1.0",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.8.2"
-  },
-  "keywords": [
-    "typescript",
-    "node",
-    "basicNode"
-  ],
-  "author": "hassanzohdy",
-  "license": "MIT"
+    "name": "@mongez/node",
+    "version": "1.0.1",
+    "description": "Node Js Manager",
+    "main": "src/index.ts",
+    "dependencies": {},
+    "scripts": {
+        "update": "ncu -u",
+        "fix:test": "eslint --fix -c ./.eslintrc.json ./tests",
+        "format:test": "prettier --write ./tests/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
+        "fix": "eslint --fix -c ./.eslintrc.json ./src",
+        "format": "prettier --write ./src/**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json",
+        "test": "jest tests"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/hassanzohdy/node"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.2.0",
+        "eslint": "^8.25.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-unused-imports": "^2.0.0",
+        "jest": "^29.2.1",
+        "npm-check-updates": "^16.3.14",
+        "prettier": "^2.7.1",
+        "prettier-plugin-organize-imports": "^3.1.1",
+        "ts-jest": "^29.0.3",
+        "typescript": "^4.8.4"
+    },
+    "keywords": [
+        "typescript",
+        "node",
+        "basicNode"
+    ],
+    "author": "hassanzohdy",
+    "license": "MIT"
 }
